samples/_failures_safe/1761517048_d73c13_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37cbeccb.c: In function ‘print_shortest_paths’:
./samples/SAFE/__tmp_37cbeccb.c:173: error: expected ‘{’ at end of input
